# transition_tree

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Language and types spec v0.1.txt  Language and types spec v0.2.txt  Magic Transition ToDo Tree.txt  Product charter.txt  README.md  UI contract.txt  cnl_lint.py  derived_status.py  goblintodo.txt  invariants.py  loader_json.py  mttt_architecture_review.md  mttt_cli.py  mttt_model.py  normalize_json.py  pipeline.py  pyproject.toml  render.md  resume_ranking.py  tree.db  tree.db.bak  tree_render.txt
backup/: loader_json.py  pipeline.py
docs/: events.md  state_authority.md
fixtures/: nodes.json
scripts/: assert_fixture_only_diff.py  capture_pre_fixture_diff.py  get_ids.py  install-hooks.ps1  patch_compute_ui_state_import.py  patch_dump_canonical_serializer.py  patch_semantic_snapshot.py  patch_semantic_snapshot_insert_snapshot_obj.py  patch_semantic_snapshot_remove_late_import_block.py  patch_shadow_compute_ui_state.py  reject_utf8_bom.py  remove_duplicate_loader_calls.py  run_from_json_dir.py  run_normalize_fixture.py  run_normalize_fixtures.py  test-hooks.ps1  tmp_check_quotes.py  tmp_patch_semantic_indent.py  ttree.py  ttree_guardrails.py  write_text_no_bom.py
tests/: __init__.py  fixtures.py  test__semantic_snapshot.py  test_atomic_writes.py  test_check_until_ts.py  test_cli_diagnostics.py  test_cli_failure_exit_code.py  test_cli_json_diagnostics.py  test_cli_knowledge_check.py  test_cli_module_entry.py  test_cli_scaffold_flow.py  test_console_script.py  test_console_script_entry.py  (+20 more)
(+36 files in other folders)
