[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mttt"
version = "0.1.0"
description = "Magic Transition ToDo Tree"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mttt = "mttt.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# author = [{name="Althea McIntosh"}]